[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.7.0", features = ["pattern"] }
lazy_static = { version = "1.4.0" }
indexmap = {version = "1.9.2", features = ["serde-1"] }
lru = { version = "0.8.1" }
lfu_cache = { version = "1.2.2" }
histogram = "*"

[profile.release]
lto = true
