[package]
name = "unicache_email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = {version = "1.9.2", features = ["serde-1"] }
lru = { version = "0.8.1" }
lfu_cache = { version = "1.2.2" }
histogram = "*"
lecar = { git = "https://github.com/Wkkkkk/lecar" }
strum = "0.24.1"
strum_macros = "0.24.3"
csv = "1.1.6"
serde = "1.0.152"
preprocessor   = { git = "https://github.com/haraldng/preprocessor", rev = "c6ce7aa" }
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos", rev = "93bdd2a" }

[profile.release]
lto = true
